[package]
name = "crp-rust"
version = "1.2.0"
authors = ["Pascal Puffke"]
edition = "2018"
license = "GNU GPLv3"
repository = "https://github.com/MineClashTV/cmusrp-rust"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rpc-client = "0.3.0"
clap = "2.33.3"
structopt = "0.3.21"