[package]
name = "crp-rust"
version = "1.2.0"
authors = ["Pascal Puffke <pascal@pascalpuffke.de>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/MineClashTV/cmusrp-rust"
categories = ["command-line-utilities"]

[dependencies]
discord-rpc-client = "0.3.0"
structopt = "0.3.21"